--- a/index.html
+++ b/index.html
@@ -2,12 +2,82 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tile Grid</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body class="path">
+    <div class="grid-container"></div>
+    <scipt>
+        const gridContainer = document.querySelector('.grid-container');
+        const width = gridContainer.offsetWidth;
+        const height = width * 15 / 37;
+
+        gridContainer.style.height='${height}px';
+
+    </scipt>
+    <div class="bottom-container">
+        <div class="container">
+            <div class="algorithm-container">
+                <div class="button-container">
+                    <button class="alg-buttons" onclick="bfs()"> BFS</button>
+                    <button class="alg-buttons" onclick="dfs()">DFS</button>
+
+
+                </div>
+                <div class="button-container">
+                    <button class="alg-buttons" onclick="dijkstra('euclidean')">Dijkstra Euclidean</button>
+                    <button class="alg-buttons" onclick="dijkstra('manhattan')">Dijkstra Manhattan</button>
+                </div>
+                <div class="button-container">
+                    <button class="alg-buttons" onclick="astar('euclidean')">A* Euclidean</button>
+                    <button class="alg-buttons" onclick="astar('manhattan')">A*Manhattan</button>
+
+                </div>
+                <div class="button-container">
+                    <button class="alg-buttons" onclick="greedyBFS('euclidean')">Greedy BFS Euclidean</button>
+                    <button class="alg-buttons" onclick="greedyBFS('manhattan')"> Greedy BFS Manhattan</button>
+
+                </div>
+
+            </div>
+            <div class="main-button-container">
+                <div class="tile-button-container">
+                    <button class="tilebut1" onclick="changeColor('green')">Start Tile</button>
+                    <button class="tilebut2" onclick="changeColor('red')">End Tile</button>
+                    <button class="tilebut3" onclick="changeColor('black')">Wall Tile</button>
+                </div>
+                <div class="info-stuff">
+                    <button data-info-target="#info" class="alg-buttons">How to use</button>
+
+                </div>
+
+            </div>
+
+        </div>
+        <div class="maze-random-container">
+            <div class="maze-reset">
+                <div class="maze-button">
+                    <button class="alg-buttons" onclick="maze()">Create Maze</button>
+                </div>
+                <div class="reset-button">
+                    <button class="alg-buttons" onclick="reset()">Reset</button>
+                </div>
+
+            </div>
+            <div class="text-slider">
+                <label for="mySlider" onclick="updateRandom()">Random Tilemap</label>
+            </div>
+            <div class="slider-container">
+                <input class="range-style" type="range" min="0.1" max="0.25" step="0.01" value="0.175" id="mySlider"
+                    onchange="updateRandom()">
+            </div>
+
+
+        </div>
+    </div>
+
+
 
 </body>
 
